# Phone_Audio_FM_Transmitter

./: README.md  case-back-rev1.SLDPRT  fm_code_documentation.txt
Case/: case-front-rev1.SLDPRT
Code/: CMakeLists.txt  Makefile  sdkconfig
Code/main/: CMakeLists.txt  blt.c  blt.h  display.c  display.h  fm.c  fm.h  fm_ic.h  i2c_main.c  i2c_main.h  input.c  input.h  main.c  play_bt_music_example.c  rec.c  rec.h  trans.c  trans.h
PCB/: Phone_Audio_FM_Transmitter-B_Cu.gbl  Phone_Audio_FM_Transmitter-B_Mask.gbs  Phone_Audio_FM_Transmitter-B_Paste.gbp  Phone_Audio_FM_Transmitter-B_Silkscreen.gbo  Phone_Audio_FM_Transmitter-Edge_Cuts.gm1  Phone_Audio_FM_Transmitter-F_Cu.gtl  Phone_Audio_FM_Transmitter-F_Mask.gts  Phone_Audio_FM_Transmitter-F_Paste.gtp  Phone_Audio_FM_Transmitter-F_Silkscreen.gto  Phone_Audio_FM_Transmitter-NPTH.drl  Phone_Audio_FM_Transmitter-PTH.drl  Phone_Audio_FM_Transmitter.kicad_pcb  Phone_Audio_FM_Transmitter.kicad_prl  Phone_Audio_FM_Transmitter.kicad_pro  Phone_Audio_FM_Transmitter.kicad_sch  User_Interface.kicad_sch
PCB/project/: project.kicad_pro  project.kicad_sch  untitled.kicad_sch
