idf_component_register(SRCS "i2c_main.c"
                            "display.c"
                            "input.c"
                            "trans.c"
                            "rec.c"
                            "blt.c"
                            "main.c"
                       INCLUDE_DIRS ".")
