idf_component_register(SRCS "i2c_main.c"
                            "display.c"
                            "trans.c"
                            "rec.c"
                            "blt.c"
                            "fm.c"
                            "main.c"
                       INCLUDE_DIRS ".")
